--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -6,6 +6,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .Logo{
@@ -45,4 +46,16 @@ nav{
     font-size: 20px;
     font-weight: 700px;
     padding: 15px 18px;
+ }
+
+ .header{
+    background-color: #FFF8F3;
+ }
+ .banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+ }
+ .banner .profile-pic{
+    width: 450px;
  }
