--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -6,7 +6,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 200px;
+    margin: 0 150px;
 }
 
 .Logo{
@@ -50,12 +50,35 @@ nav{
 
  .header{
     background-color: #FFF8F3;
+    background-image: url("../images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: 700px auto;
  }
  .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+ }
+ .banner-content{
+    max-width: 500px;
  }
  .banner .profile-pic{
     width: 450px;
+ }
+
+ .banner-greet{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+
+ }
+
+ .banner-title{
+    color: var(--Dark-01, #181818);
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 5px;
  }
