--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -82,3 +82,34 @@ nav{
     margin-top: 5px;
     margin-bottom: 5px;
  }
+
+ main{
+   max-width: 1140px;
+   text-align: center;
+ }
+
+ .section-title{
+   color: var(--Dark-01, #181818);
+   text-align: center;
+   font-size: 35px;
+   font-weight: 700;
+
+ }
+
+ .about{
+   padding: 130px;
+   border-radius: 10px;
+   background: #FFF8F3;
+   margin: 130px 0;
+   margin-left: 200px;
+   
+ }
+
+ .about-info-container{
+   display: flex;
+   justify-content: space-around;
+ }
+
+ .about-info{
+   text-align: center;
+ }
